objects/fcio1__Fullcast_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>fcio1__Account_Trigger_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Trigger Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Contact_Trigger_for_Domain_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Trigger Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Debug_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Error_Log_Limit__c</fullName>
        <description>Number configurable field which can limit the number of log, eg 10,1000,100000 as needed.</description>
        <label>Error Log Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Lead_Trigger_for_Domain_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Trigger Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Fullcast Setting</label>
    <pluralLabel>Fullcast Settings</pluralLabel>
</CustomObject>